@@ -604,6 +604,8 @@ test_player_med_hold_1exx_ss2
 test_player_med_hold_1f0x
 test_player_med_hold_ff1_old
 test_player_med_hold_ff1_om300
+test_player_med_hold_default_volume
+test_player_med_hold_no_default_volume
 test_player_med_synth
 test_player_med_synth_2
 test_player_med_synth_diff_speeds
