@@ -1,0 +1,40 @@
+33 0 0 0 1753088 60 0 128 -128 0 0 0
+33 0 0 1 1753088 60 0 128 127 0 0 0
+66 0 1 0 1753088 60 0 128 -128 19 0 0
+66 0 1 1 1753088 60 0 128 127 19 0 0
+99 1 0 0 1753088 60 0 128 -128 7 0 0
+99 1 0 1 1753088 60 0 128 127 7 0 0
+132 1 1 0 1753088 60 0 128 -128 27 0 0
+132 1 1 1 1753088 60 0 128 127 27 0 0
+165 2 0 0 1753088 60 0 128 -128 15 0 0
+165 2 0 1 1753088 60 0 128 127 15 0 0
+198 2 1 0 1753088 60 0 128 -128 3 0 0
+198 2 1 1 1753088 60 0 128 127 3 0 0
+231 3 0 0 1753088 60 0 128 -128 23 0 0
+231 3 0 1 1753088 60 0 128 127 23 0 0
+264 3 1 0 1753088 60 0 128 -128 11 0 0
+264 3 1 1 1753088 60 0 128 127 11 0 0
+429 6 0 0 1753088 60 2 128 -128 0 0 0
+429 6 0 1 1753088 60 0 128 127 0 0 0
+462 6 1 0 1753088 60 2 128 -128 19 0 0
+462 6 1 1 1753088 60 0 128 127 19 0 0
+495 7 0 0 1753088 60 2 128 -128 7 0 0
+495 7 0 1 1753088 60 0 128 127 7 0 0
+528 7 1 0 1753088 60 2 128 -128 27 0 0
+528 7 1 1 1753088 60 0 128 127 27 0 0
+561 8 0 0 1753088 60 2 128 -128 15 0 0
+561 8 0 1 1753088 60 0 128 127 15 0 0
+594 8 1 0 1753088 60 2 128 -128 3 0 0
+594 8 1 1 1753088 60 0 128 127 3 0 0
+627 9 0 0 1753088 60 2 128 -128 23 0 0
+627 9 0 1 1753088 60 0 128 127 23 0 0
+660 9 1 0 1753088 60 2 128 -128 11 0 0
+660 9 1 1 1753088 60 0 128 127 11 0 0
+693 10 0 0 1753088 60 2 96 -128 31 0 0
+693 10 0 1 1753088 60 0 96 127 31 0 0
+726 10 1 0 1753088 60 2 64 -128 19 0 0
+726 10 1 1 1753088 60 0 64 127 19 0 0
+759 11 0 0 1753088 60 2 32 -128 7 0 0
+759 11 0 1 1753088 60 0 32 127 7 0 0
+792 11 1 0 1753088 60 2 0 -128 27 0 0
+792 11 1 1 1753088 60 0 0 127 27 0 0
